Adds namespaced package version (while omitting auto-creation through the pipeline for this version)

--- a/extra-tests/classes/InvocableDrivenTests.cls
+++ b/extra-tests/classes/InvocableDrivenTests.cls
@@ -61,7 +61,7 @@ private class InvocableDrivenTests {
 
   @IsTest
   static void shouldRollupMultipleDMLStatementsWithinSingleTransaction() {
-    if (InvocableDrivenTests.class.getName().contains('.')) {
+    if (RollupTestUtils.IS_NAMESPACED_PACKAGE_ORG) {
       return;
     }
     // Driven by extra-tests/flows/Rollup_Integration_Multiple_Deferred_Case_Rollups.flow-meta.xml
